; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_d3dsp_register.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dcompiler_43/extr_bytecodewriter.c_d3dsp_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@D3DSP_REGTYPE_SHIFT = common dso_local global i32 0, align 4
@D3DSP_REGTYPE_MASK = common dso_local global i32 0, align 4
@D3DSP_REGTYPE_SHIFT2 = common dso_local global i32 0, align 4
@D3DSP_REGTYPE_MASK2 = common dso_local global i32 0, align 4
@D3DSP_REGNUM_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @d3dsp_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @d3dsp_register(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @D3DSP_REGTYPE_SHIFT, align 4
  %7 = shl i32 %5, %6
  %8 = load i32, i32* @D3DSP_REGTYPE_MASK, align 4
  %9 = and i32 %7, %8
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @D3DSP_REGTYPE_SHIFT2, align 4
  %12 = shl i32 %10, %11
  %13 = load i32, i32* @D3DSP_REGTYPE_MASK2, align 4
  %14 = and i32 %12, %13
  %15 = or i32 %9, %14
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @D3DSP_REGNUM_MASK, align 4
  %18 = and i32 %16, %17
  %19 = or i32 %15, %18
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
